--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_bluebutton"
-        android:label="Blue Dot"
+        android:label="Óli's GymTimer"
         android:roundIcon="@mipmap/ic_launcher_bluebutton"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
